Fixed Contact Form Component on Popup, on iPhone SE

--- a/style/global.scss
+++ b/style/global.scss
@@ -148,11 +148,11 @@ $menu-item-active-background-color: $app-color1;
 
   .popup {    
     position: absolute;
-    height: 75%;
+    height: 70%;
     width: 90%;
     left: 5%;
     right: 25%;
-    top: 15%;
+    top: 13%;
     bottom: 25%;
     border-radius: 5px;
     border: 1px solid grey;
